<resources>
    <string name="app_name">fitnessKit_testApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="classes">Занятия</string>
    <string name="requests">Заявки</string>
    <string name="add">Добавить</string>
    <string name="chat">Чат</string>
    <string name="more">Еще</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule">Расписание</string>
    <string name="mainFontName">sans-serif-medium</string>
    <string name="dateExample">воскресенье, 01 января</string>
    <string name="dateTimeExample">00:00</string>
    <string name="classesNameExample">Йога</string>
    <string name="mainFontNameBold">sans-serif-black</string>
    <string name="trainerNameExample">Иванов Иван</string>
    <string name="locationExample">Тренажерный зал</string>
    <string name="totalDateTimeExample">0ч. 15мин.</string>
    <string name="noInternetText">Отсутствует интернет-подключение</string>
</resources>