<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/homeScheduleToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="8dp"
        android:elevation="8dp"
        android:background="@color/barsBackgroundColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/homeScheduleHeadTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/headTextSize"
            android:layout_marginEnd="16dp"
            android:fontFamily="@string/mainFontName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeScheduleToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/noEConnectionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noInternetText"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/headTextSize"
                android:visibility="gone"
                android:fontFamily="@string/mainFontName" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerScheduleRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:animationCache="true"
                app:shimmer_repeat_mode="restart"
                app:shimmer_shape="radial" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <include layout="@layout/shimmer_schedule_recyclerview" />


                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/homeScheduleRecyclerView"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                tools:listitem="@layout/home_schedule_recyclerview_item" />

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>